Adapted to Java 1.8 + InstanceManager.java